adding header and title statement to index

--- a/index.html
+++ b/index.html
@@ -2,9 +2,36 @@
 
 <html>
   <head>
+    <!-- Import Stylesheets -->
+    <link rel="stylesheet" href="styles/general.css">
+    <link rel="stylesheet" href="styles/header.css">
+    <link rel="stylesheet" href="styles/index.css"
 
+    <!-- Import Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bitcount+Grid+Double:wght@100..900&family=Roboto:wght@100..900&display=swap" rel="stylesheet">
   </head>
   <body>
-    <p>ML Course</p>
+    <!-- Header Section -->
+    <div class="header">
+    <div class="header-left">
+      <h1><a href="index.html">NW Tutoring</a></h1>
+    </div>
+
+    <div class="header-right">
+      <h2><a href="about-us.html">About Us</a></h2>
+    </div>
+    </div>
+
+    <!-- Body Section -->
+    <div class="title-statement">
+      <p>
+        <span class="word-1">Machine</span> 
+        <span class="word-2">Learning,</span> 
+        <span class="word-3">Made</span> 
+        <span class="word-4">Easy</span>
+      </p>
+    </div>
   </body>
 </html>
